--- a/components/contact.html
+++ b/components/contact.html
@@ -5,6 +5,7 @@
   <div class="contact-card" id="contact-root">
     <div class="contact-details">
       <p><strong>Email</strong><br><a href="mailto:hamzamunir7171@gmail.com">hamzamunir7171@gmail.com</a></p>
+      <p><strong>Phone</strong><br><a href="tel:+923074981971">+923074981971</a></p>
       <p><strong>Location</strong><br>Lahore, Pakistan</p>
     </div>
     <div class="contact-actions">
