--- a/components/hero.html
+++ b/components/hero.html
@@ -1,7 +1,9 @@
 <header class="hero-wrapper" id="heroWrapper">
-  <div class="hero-torch" id="heroTorch"></div>
-  <div class="hero-torch-icon" aria-hidden="true">
-    <img src="assets/images/torch.png" alt="" width="48" height="72" class="hero-torch-svg" />
+  <div class="hero-torch-group" id="heroTorchGroup" aria-hidden="true">
+    <div class="hero-torch" id="heroTorch"></div>
+    <div class="hero-torch-icon" aria-hidden="true">
+      <img src="assets/images/torch.png" alt="" width="48" height="72" class="hero-torch-svg" />
+    </div>
   </div>
   <div class="hero-parallax" id="heroParallax">
     
