--- a/components/experience.html
+++ b/components/experience.html
@@ -8,7 +8,7 @@
       <div class="experience-content">
         <h3>Software Engineer (MERN)</h3>
         <p class="experience-company">Red Panda Network</p>
-        <p class="experience-location">Lahore, Pakistan / Remote</p>
+        <p class="experience-location">Lahore, Pakistan </p>
         <p class="experience-desc">Building full-stack features for a MERN application using React, Node.js, Express, and REST APIs. Converting Figma designs into responsive, reusable UI with Tailwind CSS.</p>
       </div>
     </article>
