--- a/css/hero.css
+++ b/css/hero.css
@@ -528,6 +528,9 @@
     filter: blur(35px);
     opacity: 0.5;
   }
+  .cursor{
+    display: none !important;
+  }
 }
 
 /* ---------- Responsive: small phone ---------- */
